// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="cmotspb soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="c-d5zrhx soui-switch-indicator"
    dir="ltr"
  />
  <div
    class="cc1f4ol soui-switch-content"
  >
    <div
      class="c-eonbhc soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="cmotspb soui-switch-wrapper c-umq5t4 soui-switch-wrapper-checked cnxbzmz soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-d5zrhx soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="c1vc46w soui-switch-loading"
      />
    </div>
    <div
      class="cc1f4ol soui-switch-content"
    >
      <div
        class="c-eonbhc soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="cmotspb soui-switch-wrapper cnxbzmz soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-d5zrhx soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="c1vc46w soui-switch-loading"
      />
    </div>
    <div
      class="cc1f4ol soui-switch-content"
    >
      <div
        class="c-eonbhc soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="cmotspb soui-switch-wrapper c-8kwq4o soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-d5zrhx soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cc1f4ol soui-switch-content"
    >
      <div
        class="c-eonbhc soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="cmotspb soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-d5zrhx soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cc1f4ol soui-switch-content"
    >
      <div
        class="c-eonbhc soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="cmotspb soui-switch-wrapper c-8oyln8 soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-d5zrhx soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cc1f4ol soui-switch-content"
    >
      <div
        class="c-eonbhc soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="cmotspb soui-switch-wrapper c-umq5t4 soui-switch-wrapper-checked cnxbzmz soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-d5zrhx soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cc1f4ol soui-switch-content"
    >
      <div
        class="c-eonbhc soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="cmotspb soui-switch-wrapper cnxbzmz soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-d5zrhx soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="cc1f4ol soui-switch-content"
    >
      <div
        class="c-eonbhc soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
